--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
                 <p class="lore">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam accusamus id animi nobis perferendis unde tenetur autem ratione error et quod maxime nesciunt, exercitationem iusto culpa velit ipsum consequuntur ipsam!</p>
             </div>
         </div>
+        <section>
+            
+        </section>
     </body>
 </html>
