hero section complete

--- a/index.html
+++ b/index.html
@@ -24,11 +24,24 @@
             </header>
             <div class="hero">
                 <h1>Welcome to the future</h1>
+                <hr class="hori"/>
                 <p class="lore">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam accusamus id animi nobis perferendis unde tenetur autem ratione error et quod maxime nesciunt, exercitationem iusto culpa velit ipsum consequuntur ipsam!</p>
+                <button class="hero-button">FUTURE NOW</button>
             </div>
         </div>
-        <section>
-            
+        <div class="line">
+            <div class="icon"><i class="fa-solid fa-angle-down"></i></div>
+        </div>
+        <!-- <section class="features">
+            <div class="feature">
+                <div class="image-bg">
+                    <i class="fa-solid fa-wallet"></i>
+                </div>
+                <h4></h4>
+            </div> -->
+
         </section>
+        
     </body>
+    <script src="https://kit.fontawesome.com/bea6ca962b.js" crossorigin="anonymous"></script>
 </html>
