icon section complete

--- a/index.html
+++ b/index.html
@@ -32,13 +32,32 @@
         <div class="line">
             <div class="icon"><i class="fa-solid fa-angle-down"></i></div>
         </div>
-        <!-- <section class="features">
+        <section class="features">
             <div class="feature">
                 <div class="image-bg">
                     <i class="fa-solid fa-wallet"></i>
                 </div>
-                <h4></h4>
-            </div> -->
+                <h4>Today's Happenings</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem porro vero consectetur itaque quam eveniet corporis obcaecati iure deserunt nam!</p>
+                <a>Find out more!</a>
+            </div>
+                <div class="feature">
+                    <div class="image-bg">
+                        <i class="fa-solid fa-dollar-sign"></i>
+                    </div>
+                    <h4>Today's Happenings</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem porro vero consectetur itaque quam eveniet corporis obcaecati iure deserunt nam!</p>
+                    <a>Find out more!</a>
+                </div>
+                <div class="feature">
+                <div class="image-bg">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <h4>Today's Happenings</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem porro vero consectetur itaque quam eveniet corporis obcaecati iure deserunt nam!</p>
+                <a>Find out more!</a>
+            </div>
+            
 
         </section>
         
