brands-section-complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <button class="butn" id="login">Login</button>
                             <button id="signup">Signup</button>
                         </nav>
-                    <hr/>
+                    <hr class="nav-line"/>
                 </div>
             </header>
             <div class="hero">
@@ -67,8 +67,27 @@
             </div>
             <img src="./images/young-people-using-reels-removebg-preview.png" class="hand-section-phone" />
         </section>
-        
-        
+        <section>
+            <div class="brands">
+              <a><i class="fa-brands fa-microsoft"></i></a> 
+              <a> <i class="fa-brands fa-shopify"></i></a>
+              <a><i class="fa-brands fa-ups"></i></a>
+              <a> <i class="fa-brands fa-wikipedia-w"></i></a>  
+              <a> <i class="fa-brands fa-amazon"></i></a>  
+              <a> <i class="fa-brands fa-apple"></i></a>  
+              <a> <i class="fa-brands fa-youtube"></i></a>  
+              <a> <i class="fa-brands fa-meetup"></i></a>  
+            </div>
+        </section>
+        <!-- <footer>
+            <div class="shade-section">
+                <hr class="shade-hr"/>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <hr class="shade-hr"/>
+            </div>
+        </footer> -->
     </body>
     <script src="https://kit.fontawesome.com/bea6ca962b.js" crossorigin="anonymous"></script>
 </html>
