footer-section-complete

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
         <section>
             <div class="brands">
-              <a><i class="fa-brands fa-microsoft"></i></a> 
+              <a><i class="fa-brands fa-microsoft"></i></a>
               <a> <i class="fa-brands fa-shopify"></i></a>
               <a><i class="fa-brands fa-ups"></i></a>
               <a> <i class="fa-brands fa-wikipedia-w"></i></a>  
@@ -79,15 +79,36 @@
               <a> <i class="fa-brands fa-meetup"></i></a>  
             </div>
         </section>
-        <!-- <footer>
-            <div class="shade-section">
+        <footer>
+            <div class="higher-footer">    
+                <div class="social-links">
                 <hr class="shade-hr"/>
                 <i class="fa-brands fa-square-facebook"></i>
                 <i class="fa-brands fa-square-twitter"></i>
                 <i class="fa-brands fa-square-instagram"></i>
                 <hr class="shade-hr"/>
+                </div>
+                <div class="links">
+                    <nav>
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Policy</a>
+                    </nav>
+                    <div class="details">
+                    <span>umail@umail.com</span>
+                    <span class="dot"></span>
+                   <span>800-999-94848</span>
+                    </div>
+                </div>
             </div>
-        </footer> -->
+            <div class="f-line">
+                <div class="ico"><i class="fa-solid fa-angle-down"></i></div>
+            </div>
+            <div class="lower-footer">
+                <p>&copy; VyPy 2024</p>
+            </div>
+        </footer>
     </body>
     <script src="https://kit.fontawesome.com/bea6ca962b.js" crossorigin="anonymous"></script>
 </html>
