about-us-hero-complete

--- a/vypy-project/index.html
+++ b/vypy-project/index.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8"/>
         <title>VYPY Home</title>
         <link rel="stylesheet" href="styles.css"/>
-        
     </head>
     <body>
         <div class="container">
-            <header class="navsec">
+            <header class="navsec" id="jump">
                 <img src="./images/logo.png" alt="vytylogo" class="imag"/>
                     <div class="navbar">
                         <nav>
@@ -30,10 +29,10 @@
             </div>
         </div>
         <div class="line">
-            <div class="icon"><i class="fa-solid fa-angle-down"></i></div>
+            <a href="#feature"class="icon"><i class="fa-solid fa-angle-down"></i></a>
         </div>
         <section class="features">
-            <div class="feature">
+            <div class="feature" id="feature">
                 <div class="image-bg">
                     <i class="fa-solid fa-wallet"></i>
                 </div>
@@ -102,7 +101,7 @@
                 </div>
             </div>
             <div class="f-line">
-                <div class="ico"><i class="fa-solid fa-angle-down"></i></div>
+                <a  href="#jump" class="ico"><i class="fa-solid fa-angle-down"></i></a>
             </div>
             <div class="lower-footer">
                 <p>&copy; VyPy 2024</p>
