new-section-complete

--- a/vypy-project/about.html
+++ b/vypy-project/about.html
@@ -41,6 +41,47 @@
                 </div>
             </div>
         </section>
+        <section class="skill">
+            <div class="skill-text">
+                <h2>Our Skills</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptas magnam quo tempora. Maxime alias perspiciatis soluta cumque, quam quisquam ex voluptatum deserunt, rem mollitia numquam voluptas, quod sequi sint?</p>
+                  <div class="Skill-set">
+                <p>Video Editing</p>
+                <p>85%</p>
+                  </div>
+                <div class="indicator"></div>
+                 <div class="Skill-set">
+                <p>Videography</p>
+                <p>90%</p>
+                </div>
+                 <div class="indicator"></div>
+                 <div class="Skill-set">
+                <p>Branding</p>
+                <p>77%</p>
+                </div>
+               <div class="indicator"></div>
+            </div>
+            <div class="year">
+                <div class="year-fig">
+                    <h1>20+</h1>
+                    <p>Year Of Experience</p>
+                </div>
+                <div class="year-fig">
+                    <h1>300+</h1>
+                    <p>Satisfied Client</p>
+                </div>
+            </div>
+                <div class="year">
+                <div class="year-fig">
+                    <h1>1000+</h1>
+                    <p>Project Done</p>
+                </div>
+                <div class="year-fig">
+                    <h1>64</h1>
+                    <p>Certified Award</p>
+                </div>
+            </div>
+        </section>
     </body>
     <script src="https://kit.fontawesome.com/bea6ca962b.js" crossorigin="anonymous"></script>
 </html>
