our-skills-section-complete

--- a/vypy-project/about.html
+++ b/vypy-project/about.html
@@ -47,19 +47,19 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptas magnam quo tempora. Maxime alias perspiciatis soluta cumque, quam quisquam ex voluptatum deserunt, rem mollitia numquam voluptas, quod sequi sint?</p>
                   <div class="Skill-set">
                 <p>Video Editing</p>
-                <p>85%</p>
+                <p class="one">85%</p>
                   </div>
-                <div class="indicator"></div>
+                <div class="indicator" id="indicator1"></div>
                  <div class="Skill-set">
                 <p>Videography</p>
-                <p>90%</p>
+                <p class="two">90%</p>
                 </div>
-                 <div class="indicator"></div>
+                 <div class="indicator" id="indicator2"></div>
                  <div class="Skill-set">
                 <p>Branding</p>
-                <p>77%</p>
+                <p class="three">77%</p>
                 </div>
-               <div class="indicator"></div>
+               <div class="indicator" id="indicator3"></div>
             </div>
             <div class="year">
                 <div class="year-fig">
