footer-section-done

--- a/vypy-project/about.html
+++ b/vypy-project/about.html
@@ -71,7 +71,7 @@
                     <p>Satisfied Client</p>
                 </div>
             </div>
-                <div class="year">
+            <div class="year">
                 <div class="year-fig">
                     <h1>1000+</h1>
                     <p>Project Done</p>
@@ -82,6 +82,48 @@
                 </div>
             </div>
         </section>
+        <section class="image-box">
+            <div class="imagebox-cover">
+                <div class="imagebox-content">
+                <h4>Hire Us Now</h4>
+                <h1>We Are Always Ready To Take A Perfect Shot</h1>
+                <button>Get Started</button>
+                 </div>
+            </div>
+        </section>
+        <footer>
+            <section class="foot">
+                    <div class="foot-content">
+                        <img src="./images/logo.png"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, tempora atque! Culpa, sint modi!</p>
+                    
+                        <div class="links-social">
+                                <i class="fa-brands fa-square-facebook"></i>
+                                <i class="fa-brands fa-square-twitter"></i>
+                                <i class="fa-brands fa-square-instagram"></i>
+                        </div>
+                    </div>
+                    <div class="foot-one">
+                        <h4>Our Store</h4>
+                        <a href="./index.html"><p>Home</p></a>
+                        <a href="./about.html"><p>About</p></a>
+                        <a href="#"><p>Service</p></a>
+                        <a href="#"><p>Contact</p></a>
+                    </div>
+                    <div class="foot-two">
+                        <h4>Get In Touch</h4>
+                        <div class="foot-two-details">
+                            <span class="two-details"><i class="fa-solid fa-location-dot"></i><p>2443 Oak Ridge Omaha QA 45065</p></span>
+                            <span class="two-details"><i class="fa-solid fa-phone"></i><p>207-8767-452</p></span>
+                            <span class="two-details"><i class="fa-brands fa-whatsapp"></i><p>082-245-7253</p></span>
+                            <span class="two-details"><i class="fa-solid fa-envelope"></i><p>support@site.com</p></span>
+                        </div>
+                    </div>
+            </section>
+            <section class="footer-down">
+                <p>Copyright &copy; 2024| Powered by VyPy</p>
+            </section>
+        </footer>
     </body>
     <script src="https://kit.fontawesome.com/bea6ca962b.js" crossorigin="anonymous"></script>
 </html>
