--- a/vypy-project/about.html
+++ b/vypy-project/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>VYPY About</title>
         <link rel="stylesheet" href="styles.css"/>
         <link rel="stylesheet" href="about.css"/>
